--- a/index.html
+++ b/index.html
@@ -249,6 +249,17 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://apple.com" style="background-image:url(img/sponsors/Apple.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://aws.amazon.com" style="background-image:url(img/sponsors/AWS.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://suitabletech.com" style="background-image:url(img/sponsors/Beam.png)" target="_blank"></a>
+
+                <a class="sponsor" target="_blank" href="http://blackberry.com" style="background-image:url(img/sponsors/Blackberry.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://google.com" style="background-image:url(img/sponsors/Google.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://hp.com" style="background-image:url(img/sponsors/HP.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://kpcb.com" style="background-image:url(img/sponsors/KPCB.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://nest.com" style="background-image:url(img/sponsors/Nest.jpeg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://pillartechnology.com" style="background-image:url(img/sponsors/Pillar.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://point.io" style="background-image:url(img/sponsors/Pointio.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://sendgrid.com" style="background-image:url(img/sponsors/Sendgrid.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://twitter.com" style="background-image:url(img/sponsors/Twitter.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://venmo.com" style="background-image:url(img/sponsors/Venmo.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://epic.com" style="background-image:url(img/sponsors/Epic.jpeg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://imc.nl" style="background-image:url(img/sponsors/IMC.jpeg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://kik.com" style="background-image:url(img/sponsors/Kik.png)" target="_blank"></a>
