--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://undergroundshirts.com" style="background-image:url(img/sponsors/UGP.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://workforce.com" style="background-image:url(img/sponsors/Workforce.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://wunderground.com" style="background-image:url(img/sponsors/Wunderground.jpg)" target="_blank"></a>
-                <a class="sponsor" target="_blank" href="http://10gen.com" style="background-image:url(img/sponsors/10gen.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://mongodb.com" style="background-image:url(img/sponsors/Mongodb.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://a16z.com" style="background-image:url(img/sponsors/A16Z.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://barracuda.com" style="background-image:url(img/sponsors/Barracuda.png) "></a>
                 <a class="sponsor" target="_blank" href="http://dvp.vc" style="background-image:url(img/sponsors/DVP.png) "></a>
