--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
 
         		<a class="sponsor big-sponsor" target="_blank" href="http://hearst.com" style="background-image:url(http://i5.minus.com/iQ5xF535wxDo0.png)"></a>
                 <a class="sponsor" target="_blank" href="http://facebook.com" style="background-image:url(img/sponsors/Facebook.jpg) "></a>
+                <a class="sponsor" target="_blank" href="http://parse.com" style="background-image:url(img/sponsors/Parse.png) "></a>
                 <a class="sponsor" target="_blank" href="http://microsoft.com" style="background-image:url(img/sponsors/Microsoft.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://alchemyapi.com" style="background-image:url(img/sponsors/Alchemy.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://apple.com" style="background-image:url(img/sponsors/Apple.png)" target="_blank"></a>
