--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://kpcb.com" style="background-image:url(img/sponsors/KPCB.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://twilio.com" style="background-image:url(img/sponsors/Twilio.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://sendgrid.com" style="background-image:url(img/sponsors/Sendgrid.png)" target="_blank"></a>
-                <a class="sponsor" target="_blank" href="http://twitter.com" style="background-image:url(img/sponsors/Twitter.png)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://t.co/UMichEng" style="background-image:url(img/sponsors/Twitter.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://a16z.com" style="background-image:url(img/sponsors/A16Z.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://mongodb.com" style="background-image:url(img/sponsors/Mongodb.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://nest.com" style="background-image:url(img/sponsors/Nest.jpeg)" target="_blank"></a>
