--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://statefarm.com" style="background-image:url(img/sponsors/Statefarm.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://tellapart.com" style="background-image:url(img/sponsors/TellApart.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://undergroundshirts.com" style="background-image:url(img/sponsors/UGP.jpg)" target="_blank"></a>
-                <a class="sponsor" target="_blank" href="http://workforce.com" style="background-image:url(img/sponsors/Workforce.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://workforcesoftware.com" style="background-image:url(img/sponsors/Workforce.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://wunderground.com" style="background-image:url(img/sponsors/Wunderground.jpg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://barracuda.com" style="background-image:url(img/sponsors/Barracuda.png) "></a>
                 <a class="sponsor" target="_blank" href="http://dvp.vc" style="background-image:url(img/sponsors/DVP.png) "></a>
