--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://a16z.com" style="background-image:url(img/sponsors/A16Z.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://mongodb.com" style="background-image:url(img/sponsors/Mongodb.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://nest.com" style="background-image:url(img/sponsors/Nest.jpeg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://farmlogs.com" style="background-image:url(img/sponsors/Farmlogs.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://greylocku.com" style="background-image:url(img/sponsors/Greylock.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://mailchimp.com" style="background-image:url(img/sponsors/Mailchimp.png) "></a>
                 <a class="sponsor" target="_blank" href="http://aws.amazon.com" style="background-image:url(img/sponsors/AWS.jpg)" target="_blank"></a>
