--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://nest.com" style="background-image:url(img/sponsors/Nest.jpeg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://farmlogs.com" style="background-image:url(img/sponsors/Farmlogs.jpg) "></a>
                 <a class="sponsor" target="_blank" href="http://greylocku.com" style="background-image:url(img/sponsors/Greylock.jpg) "></a>
+                <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/benzinga.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://mailchimp.com" style="background-image:url(img/sponsors/Mailchimp.png) "></a>
                 <a class="sponsor" target="_blank" href="http://venmo.com" style="background-image:url(img/sponsors/Venmo.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://theilfoundation.org" style="background-image:url(img/sponsors/Thiel.jpg)" target="_blank"></a>
