--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://barracuda.com" style="background-image:url(img/sponsors/Barracuda.png) "></a>
                 <a class="sponsor" target="_blank" href="http://dvp.vc" style="background-image:url(img/sponsors/DVP.png) "></a>
                 <a class="sponsor" target="_blank" href="http://ribbon.co" style="background-image:url(img/sponsors/Ribbon.jpg) "></a>
+                <a class="sponsor" target="_blank" href="http://www.cambiumlearningtechnologies.com/" style="background-image:url(img/sponsors/Cambium.jpg)"></a>
                 <a class="sponsor" target="_blank" href="http://www.annarborusa.org" style="background-image:url(img/sponsors/Spark.png) "></a>
                 <a class="sponsor" target="_blank" href="http://tokbox.com" style="background-image:url(img/sponsors/Tokbox.png) "></a>
                 <a class="sponsor" target="_blank" href="http://benzinga.com" style="background-image:url(img/sponsors/benzinga.png)" target="_blank"></a>
