--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
         }(document, 'script', 'facebook-jssdk'));</script>
 
 
+        <div class="top-bar" style="text-align:center; font-size:14px; background-color:#000;">
+            <a href="http://mhacks.challengepost.com" target="_blank">Prize/API Information</a> &middot; &middot; 
+            <a href="brochure.pdf" target="_blank">Brochure</a> &middot; &middot; 
+            <a href="policy.pdf" target="_blank">Policy</a>
+        </div>
 
         <section id="landing">
             <div class="background-video-wrapper">
