--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ mixpanel.init("d498e52ed072e3f8eded042e16aee275");</script><!-- end Mixpanel -->
                 <a class="sponsor" target="_blank" href="http://blackberry.com" style="background-image:url(img/sponsors/Blackberry.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://hp.com" style="background-image:url(img/sponsors/HP.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://pillartechnology.com" style="background-image:url(img/sponsors/Pillar.jpg)" target="_blank"></a>
+                <a class="sponsor" target="_blank" href="http://www.baincapitalventures.com/" style="background-image:url(img/sponsors/Bain.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://point.io" style="background-image:url(img/sponsors/Pointio.png)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://epic.com" style="background-image:url(img/sponsors/Epic.jpeg)" target="_blank"></a>
                 <a class="sponsor" target="_blank" href="http://imc.nl" style="background-image:url(img/sponsors/IMC.jpeg)" target="_blank"></a>
